@@ -18,6 +18,7 @@
 - Allow to pass an array value in conditions_from_params, not only single value for columns
 - Display count items when pagination is disabled
 - Check security in column groups in forms
+- Add refresh_link option to :select form_ui
 
 = 3.3.3
 - Allow to override select options in active_scaffold_search_select
